--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -1,6 +1,9 @@
-$primary: rgb(26, 35, 126);
-$primary_variant: rgb(158, 160, 178);
-$alt: rgb(207, 207, 216);
+$primary: rgb(70, 72, 104);
+$primary_variant: rgb(37, 39, 77);
+$alt: rgb(170, 171, 184);
+
+$highlight: rgb(46, 156, 202);
+$highlight_variant: rgb(41, 100, 138);
 
 // #6E708B
 // #3D4165
