--- a/src/stylesheets/contact.scss
+++ b/src/stylesheets/contact.scss
@@ -1,7 +1,7 @@
 form.contact_form {
   .form-group {
     label.form-label {
-      color: $alt;
+      color: $primary;
       font-weight: 600;
     }
   }
