--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -1,6 +1,8 @@
 $primary: rgb(30, 35, 108);
+$primary_alt: rgb(49, 55, 165);
 $primary_variant: rgb(203, 209, 224);
 $alt: rgb(235, 235, 245);
+$alt_opac: rgba(235, 235, 245, 0.95);
 
 $highlight: rgb(46, 176, 202);
 $highlight_variant: rgb(41, 100, 138);
