--- a/src/stylesheets/_mixins.scss
+++ b/src/stylesheets/_mixins.scss
@@ -1,19 +1,19 @@
-@mixin grad {
-  background: rgb(30, 35, 108);
+@mixin bottom_grad {
+  background: rgb(203, 209, 224);
   background: -moz-linear-gradient(
     top,
-    rgba(30, 35, 108, 1) 0%,
-    rgba(220, 223, 234, 1) 100%
+    rgba(203, 209, 224, 1) 0%,
+    rgba(245, 245, 245, 1) 100%
   );
   background: -webkit-linear-gradient(
     top,
-    rgba(30, 35, 108, 1) 0%,
-    rgba(220, 223, 234, 1) 100%
+    rgba(203, 209, 224, 1) 0%,
+    rgba(245, 245, 245, 1) 100%
   );
   background: linear-gradient(
     to bottom,
-    rgba(30, 35, 108, 1) 0%,
-    rgba(220, 223, 234, 1) 100%
+    rgba(203, 209, 224, 1) 0%,
+    rgba(245, 245, 245, 1) 100%
   );
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e236c', endColorstr='#dcdfea',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cbd1e0', endColorstr='#f5f5f5',GradientType=0 );
 }
