config changes to description, cleanup and additions to about gallery

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -24,6 +24,17 @@
       font-weight: 600;
       color: $primary;
     }
+
+    a,
+    .insta_link {
+      color: darken($color: $alt, $amount: 45%);
+      font-weight: 700;
+
+      &:hover {
+        color: $primary;
+        text-decoration: none;
+      }
+    }
   }
 }
 
