--- a/src/stylesheets/navigation.scss
+++ b/src/stylesheets/navigation.scss
@@ -3,7 +3,7 @@
   position: fixed;
   background: $alt_opac;
   width: 100%;
-  height: 150px;
+  height: 140px;
 
   nav.navbar {
     background-color: none;
@@ -14,7 +14,7 @@
     .navbar_brand {
       display: block;
       margin: auto;
-      width: 130px;
+      width: 115px;
     }
 
     .navbar-collapse {
@@ -30,5 +30,22 @@
         }
       }
     }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .nav_wrap {
+    height: 120px;
+    nav.navbar {
+      background-color: $alt_opac;
+
+      .navbar_brand {
+        width: 100px;
+      }
+    }
+  }
+
+  .hero_img {
+    margin-top: 120px;
   }
 }
