--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -70,3 +70,13 @@ footer {
     }
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .insta_link {
+    font-size: 90%;
+  }
+
+  footer {
+    font-size: 80%;
+  }
+}
