--- a/src/stylesheets/about.scss
+++ b/src/stylesheets/about.scss
@@ -2,7 +2,7 @@
   margin-top: 3rem;
   p {
     color: $primary;
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
 
   h2 {
@@ -18,5 +18,11 @@ p {
     margin-top: -0.04rem;
     width: 20px;
     fill: $primary;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .about {
+    margin-top: 0.5rem;
   }
 }
