removal of dead asset import, instagram and youtube components added

--- a/src/stylesheets/navigation.scss
+++ b/src/stylesheets/navigation.scss
@@ -37,8 +37,18 @@
           font-size: 1.5rem;
           color: darken($color: $alt, $amount: 45%);
 
+          .nav_icon {
+            width: 30px;
+            margin-top: -0.3rem;
+            fill: darken($color: $alt, $amount: 45%);
+          }
+
           &:hover {
             color: $primary;
+
+            .nav_icon {
+              fill: $primary;
+            }
           }
         }
       }
